--- a/block-BJaaed/code/index.html
+++ b/block-BJaaed/code/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header>
+      <div class="header">
+        <h1>Bookly</h1>
+      </div>
+    </header>
+    <main>
+      <div class="container">
+        <!-- dynimacaly coded -->
+      </div>
+    </main>
     <script src="./script.js"></script>
   </body>
 </html>
