--- a/block-BJaaef/code/index.html
+++ b/block-BJaaef/code/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header>
+      <div class="header">
+        <h1>Peoples of GOT</h1>
+      </div>
+    </header>
+    <main>
+      <div class="container">
+
+      </div>
+    </main>
     <script src="./data.js"></script>
     <script src="./script.js"></script>
   </body>
