--- a/block-BJaaeh/code/index.html
+++ b/block-BJaaeh/code/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <main>
+        <div class="bg-image">
+          <img src="image/pexels-jess-bailey-designs-748598.jpg" alt="">
+          
+        </div>
+        <div class="clock"></div>
+        <div class="clock2"></div>
+    </main>
     <script src="./script.js"></script>
   </body>
 </html>
